--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Bienvenido a Mi Portafolio</h1>
-    <p>Hola, soy [Tu Nombre], y este es mi portafolio.</p>
+    <p>Hola, soy Sergio, y este es mi portafolio.</p>
 </body>
 </html>
